objects/ASI_TnE_Validation_Bypass__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This Custom Setting contain profiles or users that bypass the validation rules specified for TnE applications</description>
    <fields>
        <fullName>ASI_TnE_Bypass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Object_API__c</fullName>
        <label>Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ASI TnE Validation Bypass</label>
    <listViews>
        <fullName>ASI_TnE_Bypass_Settings</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>ASI_TnE_Bypass_Validation__c</columns>
        <columns>ASI_TnE_Object_API__c</columns>
        <columns>ASI_TnE_Record_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>ASI TnE Bypass Settings</label>
        <language>en_US</language>
    </listViews>
</CustomObject>